--- a/BidOnline-war/src/main/webapp/myOffers.xhtml
+++ b/BidOnline-war/src/main/webapp/myOffers.xhtml
@@ -60,7 +60,7 @@
             </div>
         </p:layoutUnit>
         <p:layoutUnit position="center">
-            <p:dataGrid value="#{myOffersController.items}" var="offers" columns="3" rows="12"
+            <p:dataGrid value="#{myOffersController.activeItems}" var="offers" columns="3" rows="12"
                         paginator="true"
                         paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                         rowsPerPageTemplate="9,12,15">
