Fixed design of view layer

--- a/BidOnline-war/src/main/webapp/itemWiseBidList.xhtml
+++ b/BidOnline-war/src/main/webapp/itemWiseBidList.xhtml
@@ -20,24 +20,101 @@
 </h:head>
 
 <h:body>
-    <p:dataList value="#{itemWiseBidListController.bidList}" var="bids" type="ordered" varStatus="loop">
-        <h:panelGrid columns="2">
-            <p:outputLabel value="Uploaded on:" style="color: red"/>
-            <p:outputLabel value="#{bids.bidDate}"/>
-            <p:outputLabel value="Bid price:" style="color: red"/>
-            <p:outputLabel value=" #{bids.bidPrice}"/>
-            <p:outputLabel value="Serial No:" style="color: red"/>
-            <p:outputLabel value="#{bids.bidId}" />
-            <p:outputLabel value="Bid by:" style="color: red"/>
-            <h:form>
-            <p:commandLink value="#{itemWiseBidListController.bidderList[loop.index].userName}"
-                    action="#{itemWiseBidListController.showUserProfile(bids.userId)}"/>
-            </h:form>
-            <!--<p:outputLabel value="Starting price:"/>-->
-            <!--<p:outputLabel value=""/>-->
-        </h:panelGrid>
-    </p:dataList>
+    <p:layout fullPage="true">
+        <p:layoutUnit position="north" size="130">
+            <div style="float: right">
+                Welcome <p:outputLabel value=" #{itemWiseBidListController.loggedUserName}"/>
+            </div>
+            <div style="padding-top: 20px">
+                <div style="float: left">
+                    <h2 style="color: #d2691e">BidOnline</h2>
+                </div>
+                <div style="padding-left: 500px;float: right;padding-top: 20px">
+                    <h:form id="north1">
+                        <h:panelGrid columns="5">
+                            <p:outputLabel value="Select category" style="color: red"/>
+                            <p:selectOneMenu value="#{itemWiseBidListController.itemCategory}">
+                                <f:selectItem itemValue="car" itemLabel="car"/>
+                                <f:selectItem itemValue="motor-cycle" itemLabel="Motor-cycle"/>
+                                <f:selectItem itemValue="auto-rickshaw" itemLabel="Auto-rickshaw"/>
+                                <f:selectItem itemValue="house" itemLabel="House"/>
+                                <f:selectItem itemValue="land" itemLabel="Land"/>
+                                <f:selectItem itemValue="shirt" itemLabel="Shirt"/>
+                                <f:selectItem itemValue="baby-wearings" itemLabel="Baby-wearings"/>
+                                <f:selectItem itemValue="shari" itemLabel="Shari"/>
+                                <f:selectItem itemValue="shoes" itemLabel="Shoes"/>
+                                <f:selectItem itemValue="diamond" itemLabel="Diamond"/>
+                                <f:selectItem itemValue="silver" itemLabel="Silver"/>
+                                <f:selectItem itemValue="gold" itemLabel="Gold"/>
+                                <f:selectItem itemValue="others" itemLabel="Others"/>
+                            </p:selectOneMenu>
+                            <p:commandButton value="Search"
+                                             action="#{itemWiseBidListController.showItemList(itemWiseBidListController.itemCategory)}"/>
+                            <p:spacer width="30px"/>
+                            <h:form>
+                            <p:commandButton rendered="#{itemWiseBidListController.loggedUserId != null}"
+                                             value="logout" action="#{itemWiseBidListController.logout}"/>
+                            </h:form>
+                        </h:panelGrid>
+                    </h:form>
+                </div>
 
+            </div>
+        </p:layoutUnit>
+        <p:layoutUnit position="center">
+            <h:form rendered="#{offersByCategoryController.loggedUserId != null}">
+                <p:menubar style="color: #add8e6">
+                    <p:submenu label="My Profile">
+                        <p:submenu label="Offers">
+                            <p:menuitem value="Pending offers" outcome="myPendingList.xhtml"/>
+                            <p:menuitem value="Active offers" outcome="myOffers.xhtml"/>
+                        </p:submenu>
+                        <p:menuitem value="Bids" outcome="myBidList.xhtml"/>
+                        <p:menuitem value="Sellings" outcome="itemDetails.xhtml"/>
+                        <p:menuitem value="Edit profile"/>
+                    </p:submenu>
+                    <p:submenu label="Available offers">
+                        <!--<p:menuitem rendered="" value="Activate offers" outcome="pendingOffers.xhtml"/>-->
+                        <p:menuitem value="Recent offers" outcome="availableOffers.xhtml"/>
+                        <p:menuitem value="Top offers"/>
+                    </p:submenu>
+                    <p:menuitem value="Sell an item" outcome="itemDetails.xhtml"/>
+
+                </p:menubar>
+            </h:form>
+            <p:spacer height="10px"/>
+
+            <div style="width: 400px;padding-left: 10px">
+                <p:dataList value="#{itemWiseBidListController.bidList}" var="bids"  varStatus="loop"
+                            paginator="true" rows="5" effectSpeed="fast"
+                            paginatorTemplate="{PreviousPageLink} {CurrentPageReport} {NextPageLink} {RowsPerPageDropdown}"
+                            rowsPerPageTemplate="5,10,15" type="none" style="width: 100px"
+                                                       >
+                    <div style="background-color: #ffe4c4;padding-right: 10px">
+
+                        <h:panelGrid columns="2">
+                            <p:outputLabel value="Item No:" style="color: red"/>
+                            <p:outputLabel value="#{bids.itemId}"/>
+                            <p:outputLabel value="Bid on(YMD):" style="color: red"/>
+                            <p:outputLabel value="#{bids.bidDate}"/>
+                            <p:outputLabel value="Bid price:" style="color: red"/>
+                            <p:outputLabel value=" #{bids.bidPrice}"/>
+                            <p:outputLabel value="Serial No:" style="color: red"/>
+                            <p:outputLabel value="#{bids.bidId}"/>
+                            <p:outputLabel value="Bid by:" style="color: red"/>
+                            <h:form>
+                                <p:commandLink value="#{bids.userId}"
+                                               action="#{itemWiseBidListController.showUserProfile(bids.userId)}"/>
+                            </h:form>
+                            <!--<p:outputLabel value="Starting price:"/>-->
+                            <!--<p:outputLabel value=""/>-->
+                        </h:panelGrid>
+                    </div>
+                    <p:spacer width="10px"/>
+                </p:dataList>
+            </div>
+        </p:layoutUnit>
+    </p:layout>
 </h:body>
 
 </html>
