--- a/BidOnline-war/src/main/webapp/userProfile.xhtml
+++ b/BidOnline-war/src/main/webapp/userProfile.xhtml
@@ -43,7 +43,7 @@
                 <p:tabView id="tabView" style="height: 500px">
                     <p:tab id="basicInfo" title="Basic Information">
                         <h:panelGrid columns="2" border="1" width="800px">
-                            <p:outputLabel value="Posted by:"/>
+                            <p:outputLabel value="Username:"/>
                             <p:outputLabel value="#{userProfileController.user.userName}"/>
 
                             <p:outputLabel value="E-mail"/>
