--- a/BidOnline-war/src/main/webapp/home.xhtml
+++ b/BidOnline-war/src/main/webapp/home.xhtml
@@ -19,24 +19,21 @@
     <h:outputStylesheet library="css" name="style.css"/>
 </h:head>
 
-<h:body styleClass="indexContainer">
+<h:body >
     <!--<div class="SignUp">-->
     <!--<h:link outcome="index.xhtml" value="logout"/>-->
     <!--</div>-->
     <p:messages/>
     <p:layout fullPage="true">
-
-        <p:layoutUnit position="center" size="130" resizable="false">
-            <!--<div align="right" style="color: blue">-->
-            <!--&lt;!&ndash;<h:link outcome="index.xhtml" value="logout" styleClass="signuplink"/>&ndash;&gt;-->
-            <!--</div>-->
-            <!--<div class="menubar">-->
-
-            <div>
-                <div>
+        <p:layoutUnit position="north" size="130" resizable="false">
+            <div style="float: right">
+                Welcome <p:outputLabel value=" #{homeController.loggedUserName}"/>
+            </div>
+            <div style="padding-top: 20px">
+                <div style="float: left">
                     <h2 style="color: #d2691e">BidOnline</h2>
                 </div>
-                <div style="padding-left: 500px;padding-bottom: 20px;">
+                <div style="padding-left: 500px;float: right;padding-top: 20px;">
                     <h:form id="north1">
                         <h:panelGrid columns="5">
                             <p:outputLabel value="Select category" style="color: red"/>
@@ -65,7 +62,8 @@
                 </div>
 
             </div>
-
+        </p:layoutUnit>
+        <p:layoutUnit position="center" >
             <h:form>
                 <p:menubar style="color: #add8e6">
                     <p:submenu label="My Profile">
