--- a/BidOnline-war/src/main/webapp/myBidList.xhtml
+++ b/BidOnline-war/src/main/webapp/myBidList.xhtml
@@ -36,7 +36,9 @@
             </h:form>
         </p:layoutUnit>
         <p:layoutUnit position="center">
-            <h2>My Bidlist</h2>
+            <div align="center">
+                <h2 style="color: #006400">My Bids</h2>
+            </div>
             <h:form>
                 <div style="width: 400px">
 
