--- a/BidOnline-war/src/main/webapp/home.xhtml
+++ b/BidOnline-war/src/main/webapp/home.xhtml
@@ -19,7 +19,7 @@
     <h:outputStylesheet library="css" name="style.css"/>
 </h:head>
 
-<h:body >
+<h:body>
     <!--<div class="SignUp">-->
     <!--<h:link outcome="index.xhtml" value="logout"/>-->
     <!--</div>-->
@@ -63,36 +63,63 @@
 
             </div>
         </p:layoutUnit>
-        <p:layoutUnit position="center" >
-            <h:form>
-                <p:menubar style="color: #add8e6">
-                    <p:submenu label="My Profile">
-                        <p:submenu label="Offers">
-                            <p:menuitem value="Pending offers" outcome="myPendingList.xhtml"/>
-                            <p:menuitem value="Active offers" outcome="myOffers.xhtml"/>
+        <p:layoutUnit position="center">
+            <div>
+                <h:form>
+                    <p:menubar style="color: #add8e6">
+                        <p:submenu label="My Profile">
+                            <p:submenu label="Offers">
+                                <p:menuitem value="Pending offers" outcome="myPendingList.xhtml"/>
+                                <p:menuitem value="Active offers" outcome="myOffers.xhtml"/>
+                            </p:submenu>
+
+                            <p:menuitem value="Bids" outcome="myBidList.xhtml"/>
+                            <p:menuitem value="Sellings" outcome="itemDetails.xhtml"/>
+                            <p:menuitem value="Edit profile"/>
                         </p:submenu>
+                        <p:submenu label="Available offers">
+                            <p:menuitem rendered="#{homeController.userRole == 0}" value="Activate offers"
+                                        outcome="pendingOffers.xhtml"/>
+                            <p:menuitem value="Recent offers" outcome="availableOffers.xhtml"/>
+                            <p:menuitem value="Top offers"/>
+                        </p:submenu>
+                        <p:menuitem value="Sell an item" outcome="itemDetails.xhtml"/>
 
-                        <p:menuitem value="Bids" outcome="myBidList.xhtml"/>
-                        <p:menuitem value="Sellings" outcome="itemDetails.xhtml"/>
-                        <p:menuitem value="Edit profile"/>
-                    </p:submenu>
-                    <p:submenu label="Available offers">
-                        <p:menuitem rendered="#{homeController.userRole == 0}" value="Activate offers"
-                                    outcome="pendingOffers.xhtml"/>
-                        <p:menuitem value="Recent offers" outcome="availableOffers.xhtml"/>
-                        <p:menuitem value="Top offers"/>
-                    </p:submenu>
-                    <p:menuitem value="Sell an item" outcome="itemDetails.xhtml"/>
-
-                </p:menubar>
-            </h:form>
+                    </p:menubar>
+                </h:form>
+            </div>
             <!--</div>-->
-            <div class="mType">
+            <div style="padding-left: 400px;float: left">
+                <div align="center">
+                    <h2 style="color: #006400">Recent Offers</h2>
+                </div>
+                <div style="float: right">
+                    <h:form>
+                        <p:dataGrid value="#{homeController.itemList}" var="offers" columns="3" rows="12"
+                                    paginator="true"
+                                    paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                    rowsPerPageTemplate="9,12,15">
+                            <!--<ui:param name="myVar" value="0"/>-->
+                            <!--<p:graphicImage value="" height="200" width="200"/>-->
+                            <div style="background-color: #ffe4c4">
+                                <h:panelGrid columns="2">
+                                    <p:outputLabel value="Item name:"/>
+                                    <p:outputLabel value=" #{offers.itemTitle}"/>
+                                    <p:outputLabel value="Fixed price:"/>
+                                    <p:outputLabel value="\$ #{offers.itemFixedPrice}"/>
+                                    <p:outputLabel value="Starting price:"/>
+                                    <p:outputLabel value="\$ #{offers.itemStartingPrice}"/>
+                                    <p:commandLink value="Posted By"
+                                                   action="#{homeController.showUserProfile(offers.userId)}"/>
 
-                <!--<h:link outcome="materialType.xhtml" value="Vehicle"/><br/>-->
-                <!--<h:link outcome="materialType.xhtml" value="Jewellery"/><br/>-->
-                <!--<h:link outcome="materialType.xhtml" value="Property"/>-->
+                                    <p:commandButton rendered="#{homeController.loggedUserId != offers.userId}" value="Buy this item"
+                                                     action="#{homeController.offeredItemDetails(offers.itemId)}"/>
 
+                                </h:panelGrid>
+                            </div>
+                        </p:dataGrid>
+                    </h:form>
+                </div>
             </div>
         </p:layoutUnit>
         <!--<p:layoutUnit position="east" size="300" resizable="false">-->
